tests/fixtures/errors/e0701_read_other_domain.mimz
// expect: E0701
module M {
  clock cka
  clock ckb
  reset rst
  in a: bit
  out ya: bit
  out yb: bit
  reg ra: bit = 0
  reg rb: bit = 0
  on rise(cka) {
    ra <- a
  }
  on rise(ckb) {
    rb <- ra
  }
  ya = ra
  yb = rb
}
